# truagents-sdk

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: contract-python.yml  release-python.yml  spec-sync.yml  tag-release.yml
codegen/: generate-python.sh  requirements.txt
docs/: releasing.md  versioning.md
scripts/: check_release_version.py  prepare-release.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: oauth_flow.py
sdk/python/src/truagents/: __init__.py  auth.py  client.py  errors.py  observability.py  retry.py
sdk/python/tests/: conftest.py
sdk/python/tests/contract/: conftest.py  test_oauth_positive_flow.py
sdk/python/tests/unit/: test_auth.py  test_client.py  test_errors.py  test_observability.py  test_retry.py
sdk/python/tests/unit/scripts/: test_check_release_version.py
