[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truagents"
dynamic = ["version"]
description = "Official Python SDK for the TruAgents Unsubscribe API."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "ablt-ai" }]
keywords = ["truagents", "unsubscribe", "sdk", "oauth"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28",
  "attrs>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.3",
  "respx>=0.22",
  "time-machine>=2.16",
  "ruff==0.15.18",
  "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/ablt-ai/truagents-sdk"
Documentation = "https://docs.truagents.com/sdks/python"
Source = "https://github.com/ablt-ai/truagents-sdk"
Issues = "https://github.com/ablt-ai/truagents-sdk/issues"

[tool.hatch.version]
path = "src/truagents/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/truagents"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["src/truagents/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pyright]
include = ["src/truagents"]
exclude = ["tests/**", "src/truagents/generated"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 300
testpaths = ["tests"]
